--- a/packages/main-module-1/package.json
+++ b/packages/main-module-1/package.json
@@ -5,6 +5,19 @@
   "main": "index.js",
   "author": "",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server --config webpack/webpack.dev.js",
+    "prod": "webpack --config webpack/webpack.prod.js",
+    "test": "mocha-webpack --webpack-config webpack/webpack.test.js \"source/tests/*\"",
+    "watch-tests": "mocha-webpack --webpack-config webpack/webpack.test.js \"source/tests/*\" --watch"
+  },
+  "devDependencies": {
+    "@lerna-test/webpack-configuration": "^1.0.0",
+		"webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
+		"mocha-webpack": "^2.0.0-beta.0"
+  },
   "dependencies": {
     "lodash": "^4.17.10",
     "@lerna-test/module-1": "^1.0.0",
