--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-es2016": "^6.24.1",
 		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
 		"chai": "^4.1.2",
 		"copy-webpack-plugin": "^4.5.1",
 		"css-loader": "^0.28.11",
