--- a/packages/main-module-2/.babelrc
+++ b/packages/main-module-2/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets" : ["es2015", "es2016", "es2017"],
+  "presets" : ["es2015", "es2016", "es2017", "react"],
   "plugins": ["transform-object-rest-spread"]
 }
