--- a/packages/webpack-configuration/package.json
+++ b/packages/webpack-configuration/package.json
@@ -12,6 +12,7 @@
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-es2016": "^6.24.1",
 		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
 		"chai": "^4.1.2",
 		"clean-webpack-plugin": "^0.1.19",
 		"copy-webpack-plugin": "^4.5.1",
